--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
+cmake_minimum_required(VERSION 3.5)
+
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 project(AOC2017)
 
 add_subdirectory (day1)
+add_subdirectory (day2)
