--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,5 @@ project(AOC2017)
 add_subdirectory (day1)
 add_subdirectory (day2)
 add_subdirectory (day3)
+add_subdirectory (day9)
+add_subdirectory (day10)
