--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,20 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 project(AOC2017)
 
+add_subdirectory (day19)
+add_subdirectory (day18)
+add_subdirectory (day17)
+add_subdirectory (day16)
+add_subdirectory (day13)
+add_subdirectory (day12)
 add_subdirectory (day1)
 add_subdirectory (day2)
 add_subdirectory (day3)
+add_subdirectory (day4)
+add_subdirectory (day5)
+add_subdirectory (day6)
+add_subdirectory (day7)
+add_subdirectory (day8)
 add_subdirectory (day9)
 add_subdirectory (day10)
+add_subdirectory (day11)
