--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 project(AOC2017)
 
+
+add_subdirectory (day23)
 add_subdirectory (day19)
 add_subdirectory (day18)
 add_subdirectory (day17)
