Added first part of day 25.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 project(AOC2017)
 
+add_subdirectory (day25)
 add_subdirectory (day24)
 add_subdirectory (day22)
 add_subdirectory (day23)
